User Interface changes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:text="Baby"
         android:textSize="26sp"
-        android:backgroundTint="@color/colorAccent"
+        android:backgroundTint="@color/colorButton"
         android:textColor="@color/colorbuttontext"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
