--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
+
     >
 
 
@@ -26,6 +27,7 @@
             android:layout_height="match_parent"
             android:layout_alignParentBottom="false"
             android:layout_margin="5dp"
+
             android:padding="2dp">
 
             <LinearLayout
@@ -78,7 +80,7 @@
                     android:layout_weight="1"
                     android:paddingLeft="5dp"
                     android:paddingRight="5dp"
-                    android:textColor="@color/colorAccent"
+                    android:textColor="@color/colorPrimaryDark"
                     android:text="Ali Khan"
                     android:textSize="16sp" />
 
@@ -90,7 +92,7 @@
                     android:layout_weight="0"
                     android:paddingLeft="5dp"
                     android:paddingRight="5dp"
-                    android:textColor="@color/colorAccent"
+                    android:textColor="@color/colorPrimaryDark"
                     android:text="May 24, 2020"
                     android:textSize="16sp" />
 
