--- a/app/src/main/res/layout/activity_add_baby.xml
+++ b/app/src/main/res/layout/activity_add_baby.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
+    android:padding="0dp"
     android:background="@color/colorbackground"
 
     tools:context=".Activities.AddBabyActivity">
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Add Baby"
+        android:visibility="gone"
         android:textAllCaps="true"
         android:textAlignment="center"
         android:textColor="@color/textcolorlite"
@@ -23,21 +24,21 @@
         android:textStyle="bold"
         />
 
-    <LinearLayout
+    <RelativeLayout
             android:id="@+id/liner1"
             android:layout_below="@+id/titleTextTV"
             android:layout_marginTop="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="0dp"
+            android:padding="10dp"
             android:layout_centerHorizontal="true"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/babyIV"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:layout_marginLeft="30dp"
+                android:layout_marginRight="80dp"
                 android:scaleType="fitXY"
                 app:srcCompat="@drawable/ic_launcher_background" />
 
@@ -45,20 +46,38 @@
                 android:id="@+id/babyIVB"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
+                android:layout_centerInParent="true"
+                android:layout_marginTop="0dp"
+                android:layout_toRightOf="@id/babyIV"
                 android:textSize="18sp"
-                android:backgroundTint="@color/colorAccent"
+                android:backgroundTint="@color/colorButton"
                 android:textColor="@color/colorbuttontext"
                 android:text="Select Image" />
-        </LinearLayout>
+        </RelativeLayout>
+
+
+    <TextView
+        android:id="@+id/info"
+        android:layout_below="@id/liner1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/textcolorlite"
+        android:padding="5dp"
+        android:layout_marginTop="10dp"
+        android:background="#000000"
+        android:text="Baby Information"
+        android:textAlignment="center"
+        android:textSize="20sp" />
+
 
     <LinearLayout
+            android:background="@color/colorCard"
             android:id="@+id/liner2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/liner1"
+            android:layout_below="@+id/info"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:orientation="vertical"
             android:padding="10dp">
 
@@ -107,7 +126,7 @@
                     android:id="@+id/babyDobB"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:backgroundTint="@color/colorAccent"
+                    android:backgroundTint="@color/colorButton"
                     android:textColor="@color/colorbuttontext"
                     android:text="Select DOB"
                     android:textSize="18sp" />
@@ -195,7 +214,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Save"
-                    android:backgroundTint="@color/colorAccent"
+                    android:backgroundTint="@color/colorButton"
                     android:textColor="@color/colorbuttontext"
                     android:textSize="18sp" />
 
