--- a/app/src/main/res/layout/activity_add_vaccine.xml
+++ b/app/src/main/res/layout/activity_add_vaccine.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
+    android:padding="0dp"
     android:background="@color/colorbackground"
     tools:context=".Activities.AddVaccineActivity">
 
@@ -14,19 +14,36 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Add Vaccine"
+        android:visibility="gone"
         android:textAllCaps="true"
         android:textAlignment="center"
         android:textSize="28sp"
         android:textColor="@color/textcolorlite"
         android:textStyle="bold"
         />
+
+    <TextView
+        android:id="@+id/info"
+        android:layout_below="@id/titleTextTV"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/textcolorlite"
+        android:padding="10dp"
+        android:layout_marginTop="0dp"
+        android:background="#000000"
+        android:text="Vaccine Information"
+        android:textAlignment="center"
+        android:textSize="20sp" />
+
     <LinearLayout
         android:id="@+id/liner2"
+        android:background="@color/colorCard"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/titleTextTV"
+        android:layout_below="@+id/info"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="20dp"
         android:orientation="vertical"
         android:padding="10dp">
 
@@ -122,7 +139,7 @@
                 android:layout_height="wrap_content"
                 android:text="Save"
                 android:textColor="@color/colorbuttontext"
-                android:backgroundTint="@color/colorAccent"
+                android:backgroundTint="@color/colorButton"
                 android:textSize="18sp" />
 
         </LinearLayout>
