--- a/app/src/main/res/layout/details_baby_row.xml
+++ b/app/src/main/res/layout/details_baby_row.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"    >
+    android:layout_margin="5dp"
+    >
 
 
         <LinearLayout
@@ -16,6 +17,8 @@
             android:paddingTop="16dp"
             android:paddingLeft="0dp"
             android:paddingRight="0dp"
+            android:paddingBottom="10dp"
+            android:background="@color/colorCard"
 
             >
             <TextView
