--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#03A9F4</color>
-    <color name="colorPrimaryDark">#0288D1</color>
-    <color name="colorAccent">#7C4DFF</color>
+    <color name="colorPrimary">#07437a</color>
+    <color name="colorPrimaryDark">#062e53</color>
+    <color name="colorAccent">#9F9F9F</color>
 
-    <color name="colorbackground">#1585F4</color>
-    <color name="colorButton">#D2D3D6</color>
+    <color name="colorbackground">#08599c</color>
+    <color name="colorButton">#1A68AF</color>
+    <color name="colorCard">#6306477C</color>
+
 
     <color name="coloriconlite">#FFF</color>
     <color name="coloricondark">#03DAC5</color>
